security-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-signature
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: verify-signature
      match:
        any:
        - resources:
            namespaces:
            - test-security
            kinds:
            - Pod
      verifyImages:
      - imageReferences:
        - "*"
        attestors:
        - entries:
          - keys:
              publicKeys: |-
                -----BEGIN PUBLIC KEY-----
                MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEDyAeMP1eS5S6DGrZqsF41TbR6l1B
[...]
                -----END PUBLIC KEY-----
